# python-color-match

./: .gitignore  Makefile  README.md  pyproject.toml
src/color_match/: __init__.py  __main__.py  color_match.py
src/color_match/util/: __init__.py  color.py
src/color_match/util/monkeypatch/: numpy_asscalar.py
test/: test_color_match.py
test/fixtures/: Makefile  build.ninja  foot-default-colors.c  foot-extra-theme-manjaro-sway-default-256color-palette.txt  meson.build  print-xterm-256-colors.c
test/util/: color_test.py
