project('color_match_fixtures', 'c',
  version: '0.1',
  default_options : ['c_std=c11', 'warning_level=2', 'werror=true'])

fixtures_bin_dir = join_paths(meson.current_source_dir(), 'bin')

executable('foot-default-colors', 'foot-default-colors.c', install: true)
executable('print-xterm-256-colors', 'print-xterm-256-colors.c', install: true)
